--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             '<b>' + '<div ALIGN="CENTER">'
             + '<span style = "font-weight:bold; color:black"</span>'
             + props.Concelho + '</b><br />' + '<div ALIGN="CENTER">'
-			+ '<p span style = "font-weight:normal; color: #000000"</p>Incidência: '
+			+ '<p span style = "font-weight:normal; color: #000000"</p>Incidência de novos casos: '
             + '<span style = "font-weight:bold; color: #c62121"</span>'
             + String(props[globalTimestamp])
             + '</b><br />' : 'Selecione um município');
