--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 from, to;
 
 
-            div.innerHTML = '<FONT SIZE=2 style = "font-family:verdana"><b>Classificação de risco <br>(Incidência cumulativa <br> a 14 dias por 100 mil habitantes)</b><span>  <span class="brsmall"></span> '; // Títulos da legenda
+            div.innerHTML = '<FONT SIZE=2 style = "font-family:verdana"><b>Classificação de risco (Incidência <br> acumulada  a 14 dias por 100 mil <br> habitantes)</b><span>  <span class="brsmall"></span> '; // Títulos da legenda
 
             for (var i = 0; i < grades.length; i++) {
                 div.innerHTML +=
